# zed-extensions-incremental-sequential-number-generator

./: Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: ci.yml
.zed/: tasks.json
crates/sequence-cli/: Cargo.toml
crates/sequence-cli/src/: main.rs
crates/sequence-core/: Cargo.toml
crates/sequence-core/src/: alpha.rs  args.rs  date.rs  error.rs  generator.rs  lib.rs  numeric.rs  parser.rs  wordlist.rs
crates/sequence-extension/: Cargo.toml
src/: lib.rs
