[package]
name = "sequence-extension"
version = "0.2.0"
edition.workspace = true
license.workspace = true
description = "Zed extension exposing sequence-core's numeric/alpha/date/word-list generators as a slash command."

[lib]
crate-type = ["cdylib"]

[dependencies]
sequence-core = { path = "../sequence-core" }
zed_extension_api = "0.7.0"
